--- a/.github/workflows/update_dependabot.yml
+++ b/.github/workflows/update_dependabot.yml
@@ -1,7 +1,10 @@
 name: Update Dependabot config
 
 # Only on manual triggers.
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 
 
 jobs:
