--- a/.github/workflows/size_labeling.yml
+++ b/.github/workflows/size_labeling.yml
@@ -9,7 +9,7 @@ jobs:
       - name: code-size-labels
         uses: "pascalgn/size-label-action@v0.4.3"
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # Ignore javascript bundles and map files.
           IGNORED: "**/*.bundle.*\n**/*.chunk.*\n**/*.dmm"
         with:
@@ -29,7 +29,7 @@ jobs:
       - name: map-size-labels
         uses: "pascalgn/size-label-action@v0.4.3"
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # Ignore everything but dmm files.
           IGNORED: ".*\n!**/*.dmm"
         with:
