--- a/.github/workflows/size_labeling.yml
+++ b/.github/workflows/size_labeling.yml
@@ -1,9 +1,12 @@
 name: size-labels
 
-on: pull_request
+on:
+  pull_request:
+    branches:
+    - master
 
 jobs:
-  size-labelling:
+  size-labeling:
     runs-on: ubuntu-latest
     steps:
       - name: code-size-labels
@@ -25,7 +28,6 @@ jobs:
               "5000": "code: FUCK",
               "10000": "code: The Massive Refactor of The Week"
             }
-
       - name: map-size-labels
         uses: "pascalgn/size-label-action@v0.4.3"
         env:
