--- a/.github/workflows/compile_changelogs.yml
+++ b/.github/workflows/compile_changelogs.yml
@@ -3,6 +3,7 @@ name: Compile changelogs
 on:
   schedule:
   - cron: "0 0 * * *"
+  workflow_dispatch:
 
 jobs:
   compile:
@@ -16,7 +17,7 @@ jobs:
         run: |
           unset SECRET_EXISTS
           if [ -n "$CHANGELOG_ENABLER" ]; then SECRET_EXISTS=true ; fi
-          echo "::set-output name=CL_ENABLED::$SECRET_EXISTS"
+          echo "CL_ENABLED=$SECRET_EXISTS" >> $GITHUB_OUTPUT
       - name: "Setup python"
         if: steps.value_holder.outputs.CL_ENABLED
         uses: actions/setup-python@v1
@@ -30,9 +31,10 @@ jobs:
           sudo apt-get install  dos2unix
       - name: "Checkout"
         if: steps.value_holder.outputs.CL_ENABLED
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
         with:
           fetch-depth: 25
+          persist-credentials: false
       - name: "Compile"
         if: steps.value_holder.outputs.CL_ENABLED
         run: |
