--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,19 +4,32 @@
 # In the event that multiple org members are to be informed of changes
 # to the same file or dir, add them to the end under Multiple Owners
 
-# LetterJay
+## HOSTS
 
-/code/modules/client/preference_setup/loadout/loadout_donator.dm @LetterJay
-/SQL/database_changelog.txt @LetterJay
+/code/modules/client/preference_setup/loadout/loadout_donator.dm @LetterJay @deathride58
+/SQL/database_changelog.txt @LetterJay @deathride58
 
-# Zandario
+
+## MAINTAINERS
+
+### Zandario
 
 /code/__DEFINES/chat.dm @Zandario
 /code/__DEFINES/tgui.dm @Zandario
 /code/controllers/subsystem/chat.dm @Zandario
 /code/controllers/subsystem/ping.dm @Zandario
 /code/controllers/subsystem/tgui.dm @Zandario
-/code/modules/tgchat @Zandario
-/code/modules/tgui @Zandario
-/code/modules/tgui_panel @Zandario
-/tgui @Zandario
+/code/modules/tgchat/ @Zandario
+/code/modules/tgui/ @Zandario
+/code/modules/tgui_panel/ @Zandario
+/tgui/ @Zandario
+
+## Zandario (explicitly disowned)
+
+/tgui/packages/tgui/interfaces/
+/tgui/packages/tgui/styles/interfaces/
+/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
+/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+
+
+## CONTRIBUTORS
