--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -41,6 +41,10 @@
 /tgui/packages/tgui-panel/styles/goon/chat-dark.scss
 /tgui/packages/tgui-panel/styles/goon/chat-light.scss
 
+### TheLordME
+
+/code/modules/power/geothermal_power.dm @TheLordME
+
 ### Multiple Owners
 
 
