--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -102,7 +102,7 @@ jobs:
         run: |
           bash tools/ci/install_byond.sh
           source $HOME/BYOND/byond/bin/byondsetup
-          tools/build/build --ci dm -DCIBUILDING
+          tools/build/build --ci dm -DCIBUILDING -DCITESTING
           bash tools/ci/run_server.sh
         env:
           CBT_BUILD_MODE: TEST_RUN
