Disable DME Validation for now

--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -43,11 +43,12 @@ jobs:
           bash tools/ci/check_changelogs.sh
           bash tools/ci/check_grep.sh
           bash tools/ci/check_misc.sh
-          tools/bootstrap/python tools/validate_dme.py <citadel.dme
           tools/build/build --ci lint tgui-test
           tools/bootstrap/python -m dmi.test
           tools/bootstrap/python -m mapmerge2.dmm_test
           ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1
+        # This is supposed to go after `bash tools/ci/check_misc.sh`
+        #  tools/bootstrap/python tools/validate_dme.py <citadel.dme
       - name: Annotate Lints
         uses: yogstation13/DreamAnnotate@v2
         if: always()
