--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,9 @@
 # We don't want prettier to run on anything outside of the TGUI folder, so we have to do this.
 /*
 
-# We want it to run into the TGUI folder, however.
+# We definitely want it to run into the TGUI folder.
 !/tgui
+
+# Other misc directories we want to run it on.
+!/strings
+!/nano
